--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,12 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
+  database: <%= ENV["DB_NAME"] %>
+  username: <%= ENV["DB_USERNAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
+  host: <%= ENV["DB_HOSTNAME"] %>
+  port: <%= ENV["DB_PORT"] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
   socket: /tmp/mysql.sock
 
 development:
